# TorchAlgebras

./: pyproject.toml
tests/: test_algebras.py  test_linear.py
torchalgebras/: __init__.py  algebras.py  base.py  how to subclass.ipynb
